--- a/src/App.css
+++ b/src/App.css
@@ -4,125 +4,132 @@
 }
 
 
-.Navber_div{
+.Navber_div {
   width: 90%;
-  background: white;  
+  background: white;
   font-size: 16px;
   display: flex;
   justify-content: flex-end;
-  flex-direction: row; 
+  flex-direction: row;
 }
 
 
-.nav_menu{
+.nav_menu {
   padding: 10px 20px 25px 25px;
-  color: #454c7e; 
-  margin-top: 20px;  
+  color: #454c7e;
+  margin-top: 20px;
 }
 
-.nav_menu:hover{  
+.nav_menu:hover {
   border-radius: 10px;
   cursor: pointer;
   background: var(--back_color);
-  color: white;  
-  height: 5px;  
+  color: white;
+  height: 40px;
 }
 
-.profile_btn{
-  padding: 10px 20px 25px 25px;  
-  margin-top: 20px;    
+.profile_btn {
+  padding: 1px 21px 19px 15px;
+  margin-top: 20px;
   color: 'black';
   cursor: pointer;
-  background: #354895;
-  color: white;
-  height: 8px;
+  /* background: #354895; */
+  color: #454c7e;
+  height: 45px;
   margin-left: 5px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
-.profile_btn:hover{
+.profile_btn:hover {
   cursor: pointer;
+  /* background: #61056c; */
+  border-radius: 10px;
+  color: white;
   background: #61056c;
+  height: 40px;
 }
 
 
 
 
 
-.courasal_div{
+.courasal_div {
   font-weight: bold;
   height: 450px;
   width: 100%;
-  background: var(--back_color);  
+  background: var(--back_color);
 }
 
-.coura_div{   
-  width: 90%;  
+.coura_div {
+  width: 90%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 10px; 
+  grid-gap: 10px;
 }
 
 
-.courasal_left{
+.courasal_left {
   width: 100%;
   color: white;
 }
 
-.courasal_left img{  
+.courasal_left img {
   margin-left: 200px;
   width: 280px;
   height: 450px;
 }
 
-.courasal_right{
+.courasal_right {
   width: 100%;
   color: white;
   padding-top: 45px;
 }
 
 
-.sobai_jitba{
-    font-family: Hind Siliguri;    
-    font-size: 45px;
-    padding-top: 5px;
-    color: #fff;   
+.sobai_jitba {
+  font-family: Hind Siliguri;
+  font-size: 45px;
+  padding-top: 5px;
+  color: #fff;
 }
 
-.sobai_jitba_b{
-    font-family: Hind Siliguri;    
-    font-size: 20px;
-    padding-top: 20px;
-    color: #fff;   
+.sobai_jitba_b {
+  font-family: Hind Siliguri;
+  font-size: 20px;
+  padding-top: 20px;
+  color: #fff;
 }
 
-.courasal_right button{
+.courasal_right button {
   width: 35%;
   height: 50px;
   margin-top: 30px;
   cursor: pointer;
-  margin-right: 30px; 
-  background: #61056c;
-  font-size: 16px;  
-  color: white;
-  border: 3px solid #61056c;
+  margin-right: 30px;
+  background: white;
+  color: #13278b;
+  font-size: 16px;
   border-radius: 10px;
 }
 
-.courasal_right button:hover{
-  background: white;
-  color: #13278b;
+.courasal_right button:hover {
+  background: #61056c;
+  color: white;
+  border: 3px solid #61056c;
 }
 
 
-.vedio_tag{
+.vedio_tag {
   width: 500px;
-  height: 300px;  
+  height: 300px;
   border-radius: 20px;
 }
 
-.mentor_one{
+
+
+
+.mentor_one {
   font-family: Hind Siliguri;
   font-size: 24px;
   font-weight: bold;
@@ -132,7 +139,7 @@
   padding-bottom: 10px;
 }
 
-.mentor_two{
+.mentor_two {
   font-family: Hind Siliguri;
   font-size: 16px;
   font-weight: bold;
@@ -142,18 +149,28 @@
   padding-bottom: 10px;
 }
 
-.mentor button{
+.mentor button {
   width: 35%;
   height: 50px;
   margin-top: 30px;
   cursor: pointer;
-  margin-right: 30px; 
+  margin-right: 30px;
   background: #61056c;
-  font-size: 16px;  
+  font-size: 16px;
   color: white;
   border: 3px solid #61056c;
   border-radius: 10px;
 }
 
- 
- 
+.mentor button:hover {
+  width: 35%;
+  height: 50px;
+  margin-top: 30px;
+  cursor: pointer;
+  margin-right: 30px;
+  background: var(--back_color);
+  font-size: 16px;
+  color: white;
+  border: 1px solid #61056c;
+  border-radius: 10px;
+}
