--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
+body {
+  background-color: #f3f5f9 !important;
+}
+
+
 :root {
   --back_color: #354895;
   --text_color: #61056c;
 }
 
+.main-Navber_div{
+  width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: white;
+}
 
 .Navber_div {
   width: 90%;
@@ -14,10 +27,12 @@
 }
 
 
+
+
 .nav_menu {
   padding: 10px 20px 25px 25px;
   color: #454c7e;
-  margin-top: 20px;
+  margin-top: 20px;  
 }
 
 .nav_menu:hover {
@@ -33,20 +48,19 @@
   margin-top: 20px;
   color: 'black';
   cursor: pointer;
-  /* background: #354895; */
-  color: #454c7e;
+  color: white;
+  background: #61056c;
   height: 45px;
   margin-left: 5px;
-  /* border-radius: 10px; */
+  border-radius: 10px;
 }
 
 .profile_btn:hover {
   cursor: pointer;
-  /* background: #61056c; */
   border-radius: 10px;
   color: white;
-  background: #61056c;
-  height: 40px;
+  background: var(--back_color);
+  height: 45px;
 }
 
 
@@ -173,4 +187,76 @@
   color: white;
   border: 1px solid #61056c;
   border-radius: 10px;
+}
+
+
+
+/* course slider start  */
+
+
+.slick-prev {
+  left: -15px !important;
+}
+
+
+.slick-arrow {
+  z-index: 2;
+  width: 51px !important;
+  height: 52px !important;
+  background: #354895 !important;
+  border-radius: 26px !important;
+}
+
+
+/* course slider end */
+
+
+
+.all_course_slide {
+  font-size: 26px;
+  padding-bottom: 45px;
+  text-align: center;
+  color: #354895;
+  font-weight: bold;
+}
+
+
+.online_chouching {  
+  padding-top: 40px;  
+  padding-bottom: 40px;  
+  text-align: center;
+  width: 95%;
+  background-color: white;
+  box-shadow: 1px 1px 11px -5px;
+  border: 0 solid #e5e7eb;  
+  border-radius: 15px;
+  transition-property: margin-top;
+  transition-duration: 1s;
+}
+
+.online_chouching:hover {
+  margin-top: -15px;
+   position: ;
+}
+
+.online_chouching_header{
+  color: #354895;
+  padding-bottom: 20px;
+  font-size: 26px;
+  border-bottom: 1px solid #e5e7eb;
+}
+
+.online_chouching img{
+  width: 85%;
+  padding-bottom: 20px;  
+}
+
+
+.main_fooder{
+  font-family: Baloo Da\ 2;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background: #e4edf4;
+  height:'200px';
+  line-height: 30px;  
 }
