--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   --text_color: #61056c;
 }
 
-.main-Navber_div{
+.main-Navber_div {
   width: 100%;
   position: -webkit-sticky;
   position: sticky;
@@ -16,6 +16,31 @@ body {
   z-index: 100;
   background: white;
 }
+
+.main-Navber_div img {
+  width: 150px;
+  height: 55px;
+  position: absolute;
+  top: 15px;
+  left: 100px;
+  cursor: pointer;
+}
+
+.logo {
+  width: 200px;
+  height: 70px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.playstore {
+  width: 150px;
+  height: 55px;
+  margin-top: 10px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
 
 .Navber_div {
   width: 90%;
@@ -28,12 +53,17 @@ body {
 
 
 
-
 .nav_menu {
+  text-decoration: none;
   padding: 10px 20px 25px 25px;
-  color: #454c7e;
-  margin-top: 20px;  
+  margin-top: 20px;
 }
+
+.Navber_div a {
+  text-decoration: none;
+  color: #454c7e;
+}
+
 
 .nav_menu:hover {
   border-radius: 10px;
@@ -43,6 +73,17 @@ body {
   height: 40px;
 }
 
+.active{  
+  padding: 10px 20px 25px 25px;
+  margin-top: 20px;
+  cursor: pointer;
+  background: var(--back_color);
+  color: white !important;
+  height: 40px;
+  border-radius: 10px;
+}
+
+ 
 .profile_btn {
   padding: 1px 21px 19px 15px;
   margin-top: 20px;
@@ -221,14 +262,14 @@ body {
 }
 
 
-.online_chouching {  
-  padding-top: 40px;  
-  padding-bottom: 40px;  
+.online_chouching {
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-align: center;
   width: 95%;
   background-color: white;
   box-shadow: 1px 1px 11px -5px;
-  border: 0 solid #e5e7eb;  
+  border: 0 solid #e5e7eb;
   border-radius: 15px;
   transition-property: margin-top;
   transition-duration: 1s;
@@ -236,27 +277,71 @@ body {
 
 .online_chouching:hover {
   margin-top: -15px;
-   position: ;
+  position: ;
 }
 
-.online_chouching_header{
+.online_chouching_header {
   color: #354895;
   padding-bottom: 20px;
   font-size: 26px;
   border-bottom: 1px solid #e5e7eb;
 }
 
-.online_chouching img{
+.online_chouching img {
   width: 85%;
-  padding-bottom: 20px;  
+  padding-bottom: 20px;
 }
 
 
-.main_fooder{
+.main_fooder {
   font-family: Baloo Da\ 2;
   padding-top: 50px;
   padding-bottom: 50px;
   background: #e4edf4;
-  height:'200px';
-  line-height: 30px;  
+  height: '200px';
+  line-height: 30px;
+}
+
+
+.back_image {
+  background-color: #354895;
+}
+
+.main_advice {}
+
+.text-header {
+  color: white;
+  text-align: center;
+  font-size: 38px;
+  padding: 100px 20px 20px 20px;
+  font-weight: bold;
+}
+
+.cat_list {
+  border: 1px solid lightgray;
+  height: 220px;
+  margin-top: 10%;
+}
+
+
+.cat_list img {
+  width: 100px;
+  height: 110px;
+  margin-left: 35%;
+  margin-top: 15%;
+  cursor: pointer;
+}
+
+.book_name {
+  text-align: center;
+  padding-top: 10px;
+  font-size: 18px;
+}
+
+
+.cata_header_test {
+  font-size: 25px;
+  padding: 40px 0px 20px 0px;
+  font-weight: bold;
+  color: #354895;
 }
